k8s/study/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-server
spec:
  rules:
    - http:
        paths:
          - path: /apache
            backend:
              serviceName: apache
              servicePort: 80
          - path: /nginx
            backend:
              serviceName: nginx
              servicePort: 80
